@@ -6,6 +6,7 @@ from zope.interface import Interface
 from zope.interface import alsoProvides
 from zope.interface import classImplements
 from zope.interface import directlyProvides
+from zope.publisher.interfaces.browser import IDefaultBrowserLayer
 import unittest2
 
 
@@ -100,3 +101,13 @@ class MockTestCase(mocktestcase.MockTestCase, unittest2.TestCase):
         # patch: do not count.
         self.expect(self._getToolByName_mock(ANY, name)).result(
             mock).count(0, None)
+
+    def stub_request(self, content_type='text/html'):
+        """Returns a stub request providing IDefaultBrowserLayer with some
+        headers and options required for rendering templates.
+        """
+        request = self.providing_stub(IDefaultBrowserLayer)
+        self.expect(request.debug).result(False)
+        self.expect(request.response.getHeader('Content-Type')).result(
+            content_type)
+        return request
