@@ -40,6 +40,7 @@ setup(name='ftw.testing',
         'zope.interface',
         'zope.component',
         'zope.configuration',
+        'zope.publisher',
         ],
       tests_require=tests_require,
       extras_require={'tests': tests_require},
